# redirect-on-post

./: .gitignore  Cargo.toml  README.md
src/: main.rs  tests.rs
standalone/: Cargo.toml  README.md
standalone/src/: main.rs
