[package]
name = "redirect-on-post"
version = "0.1.0"
authors = ["Gus Power <gus@infinitesidequests.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.4"
log = "0.4.14"
ureq = { version = "2.1.1", features = ["cookies", "json"] }
url = "2.2.2"
# dev-dependencies
async-std = { version = "1.9.0", features = ["attributes"] }
wiremock = "0.5.3"
